Fixed broken layout

--- a/client/sass/pages/_about.scss
+++ b/client/sass/pages/_about.scss
@@ -1,6 +1,21 @@
-.about-card {
-  @include mobileSeparator;
-  @include shadowBorder;
+.about {
+  &.card-column {
+    display: flex;
+  }
+
+  &.card {
+    padding: 16px;
+    width: 100%;
+    @include mobileSeparator;
+    @include shadowBorder;
+
+  }
+
+  @include respond-to('medium') {
+    &#row {
+      display: flex;
+    }
+  }
 }
 
 #about-1 {
